chapter13/testbed.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: client
  template:
    metadata:
      labels:
        app.kubernetes.io/name: client
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  app.kubernetes.io/name: webserver
              topologyKey: kubernetes.io/hostname
      containers:
        - name: netshoot
          image: nicolaka/netshoot
          command: [sleep, infinity]
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: webserver
  template:
    metadata:
      labels:
        app.kubernetes.io/name: webserver
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  app.kubernetes.io/name: client
              topologyKey: kubernetes.io/hostname
      containers:
        - name: nginx
          image: nginxinc/nginx-unprivileged:1.29.1
---
apiVersion: v1
kind: Service
metadata:
  name: webserver
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: webserver
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
